K8S/applibri-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.network/books: "true"
    io.kompose.service: applibri
  name: applibri
spec:
  containers:
    - args:
        - sh
        - -c
        - sleep 120s ; python3 ./libri.py
      image: giorgiova123/microservizi:Applibri
      name: applibri
      ports:
        - containerPort: 5000
      resources: {}
  restartPolicy: OnFailure
status: {}
