K8S/appprestiti-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.network/borrowings: "true"
    io.kompose.service: appprestiti
  name: appprestiti
spec:
  containers:
    - args:
        - sh
        - -c
        - sleep 110s ; python3 ./prestiti.py
      image: appprestiti
      name: appprestiti
      ports:
        - containerPort: 5000
      resources: {}
  restartPolicy: OnFailure
status: {}
