K8S/consumer-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: consumer-app
  name: consumer-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: consumer-app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/books: "true"
        io.kompose.service: consumer-app
    spec:
      containers:
        - image: consumer-app
          name: consumer-app
          resources: {}
      restartPolicy: Always
status: {}
