K8S/dblibri-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.network/books: "true"
    io.kompose.service: dblibri
  name: dblibri
spec:
  containers:
    - env:
        - name: MYSQL_DATABASE
          value: Libri
        - name: MYSQL_PASSWORD
          value: Giorgiovanni123!
        - name: MYSQL_ROOT_PASSWORD
          value: Giorgiovanni123!
        - name: MYSQL_USER
          value: sa
      image: giorgiova123/microservizi:Dblibri
      name: dblibri
      ports:
        - containerPort: 3306
      resources: {}
  restartPolicy: OnFailure
status: {}
