K8S/dbutenti-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.network/users: "true"
    io.kompose.service: dbutenti
  name: dbutenti
spec:
  containers:
    - env:
        - name: MYSQL_DATABASE
          value: Utenti
        - name: MYSQL_PASSWORD
          value: Giorgiovanni123!
        - name: MYSQL_ROOT_PASSWORD
          value: Giorgiovanni123!
        - name: MYSQL_USER
          value: sa
      image: giorgiova123/microservizi:UtentiDb
      name: dbutenti
      resources: {}
  restartPolicy: OnFailure
status: {}
