K8S/applibri-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: applibri
  name: applibri
spec:
  ports:
    - name: "4999"
      port: 4999
      targetPort: 5000
  selector:
    io.kompose.service: applibri
status:
  loadBalancer: {}
