K8S/appprestiti-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: appprestiti
  name: appprestiti
spec:
  ports:
    - name: "4998"
      port: 4998
      targetPort: 5000
  selector:
    io.kompose.service: appprestiti
status:
  loadBalancer: {}
