K8S/couchserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: couchserver
  name: couchserver
spec:
  ports:
    - name: "5983"
      port: 5983
      targetPort: 5984
  selector:
    io.kompose.service: couchserver
status:
  loadBalancer: {}
