K8S/dblibri-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: dblibri
  name: dblibri
spec:
  ports:
    - name: "3305"
      port: 3305
      targetPort: 3306
  selector:
    io.kompose.service: dblibri
status:
  loadBalancer: {}
