K8S/books-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: books
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/books: "true"
  podSelector:
    matchLabels:
      io.kompose.network/books: "true"
